--- a/TVTrackWeb/Components/Pages/Login.razor
+++ b/TVTrackWeb/Components/Pages/Login.razor
@@ -5,6 +5,7 @@
 @inject Neo4jService Neo4j
 @inject SesionService Sesion
 @inject NavigationManager Navigation
+@inject NavigationManager NavigationManager
 
 <PageTitle>Login</PageTitle>
 
