se soluciono el levantamiento de pagina

--- a/TVTrackWeb/Components/Pages/AdminDashboard.razor
+++ b/TVTrackWeb/Components/Pages/AdminDashboard.razor
@@ -1,5 +1,6 @@
 ﻿@page "/admin"
-@layout MainLayout
+
+@layout TVTrackWeb.Components.Layout.MainLayout
 @inject SesionService Sesion
 
 <h3>👋 Bienvenido, @Sesion.Nombre</h3>
